Refactoring: split up in two modules